Avoid too wide page title

--- a/_sass/components/_page-title.scss
+++ b/_sass/components/_page-title.scss
@@ -1,6 +1,7 @@
 .page-title {
   text-align: center;
-  margin: 5em 0 10em;
+  margin: 5em auto 10em;
+  max-width: 80%;
 
   h1 {
     text-align: center;
